--- a/app/components/special/WelcomeText/styles.css
+++ b/app/components/special/WelcomeText/styles.css
@@ -1,6 +1,6 @@
 .welcomeText {
-  margin-top: 25vh;
-  margin-bottom: 3.5vh;
+  font-family: 'Quattrocento Sans', sans-serif;
+  margin-top: 2.5vh;
   color: var(--cHeading);
   h1,
   h3 {
@@ -8,11 +8,24 @@
   }
 
   h1 {
-    font-size: 4.2rem;
+    font-size: 2.8rem;
   }
 
   h3 {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     font-weight: 400;
+  }
+
+  @media (min-width: 80em) {
+    margin-top: 25vh;
+
+    h1 {
+      font-size: 4.2rem;
+    }
+
+    h3 {
+      font-size: 2.4rem;
+      font-weight: 400;
+    }
   }
 }
