--- a/app/containers/FilterForm/styles.css
+++ b/app/containers/FilterForm/styles.css
@@ -4,27 +4,52 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
+  padding: 20px 0;
 }
-
 .filters {
   display: flex;
   color: #fff;
   flex-direction: column;
   position: relative;
   max-width: 600px;
+  flex-basis: auto;
+  :local button {
+    margin: 25px 0 0 5px;
+    width: calc(100% - 10px);
+  }
+  :local h4 {
+    margin: 20px 0 4px 0;
+  }
+  :local Select {
+    opacity: 0;
+  }
+  .full-width {
+    flex-basis: 100%;
+  }
   &.horizontal {
+    flex-basis: 100%;
+    width: 100%;
     max-width: inherit;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-items: center;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: center;
     position: absolute;
     overflow: visible;
     bottom: 0;
     background-color: #22262e;
-    padding: 30px 20px;
+    padding: 25px 20px;
     z-index: 4;
+    :local h4 {
+      margin: 12px 0 4px 0;
+    }
+    :local button {
+      top: 18px;
+      position: relative;
+      margin: 0 0 0 5px;
+    }
+    .full-width {
+      flex-basis: auto;
+    }
     :global .Select-control {
       background-color: #22262e;
     }
@@ -32,19 +57,5 @@
       top: auto;
       bottom: 100%;
     }
-  }
-}
-
-.style-sup {
-  :global .Select-control,
-  :global .is-open > .Select-control {
-    border: 2px solid var(--cSupDark);
-  }
-
-  :global .Select-control,
-  :global .is-open > .Select-control,
-  :global .Select-menu-outer,
-  :global .Select-option {
-    border-color: var(--cSupDark);
   }
 }
