--- a/app/components/general/Section/styles.css
+++ b/app/components/general/Section/styles.css
@@ -7,18 +7,33 @@
     lost-column: 1/1;
   }
   &.--1-of-2 {
-    lost-column: 1/2;
+    lost-column: 1/1;
+    @media (min-width: 40em) {
+      lost-column: 1/2;
+    }
   }
   &.--1-of-3 {
-    lost-column: 1/3;
+    lost-column: 1/1;
+    @media (min-width: 40em) {
+      lost-column: 1/3;
+    }
   }
   &.--1-of-4 {
-    lost-column: 1/4;
+    lost-column: 1/1;
+    @media (min-width: 40em) {
+      lost-column: 1/4;
+    }
   }
   &.--1-of-5 {
-    lost-column: 1/5;
+    lost-column: 1/1;
+    @media (min-width: 40em) {
+      lost-column: 1/5;
+    }
   }
   &.--1-of-6 {
-    lost-column: 1/6;
+    lost-column: 1/1;
+    @media (min-width: 40em) {
+      lost-column: 1/6;
+    }
   }
 }
