--- a/app/components/special/MovieArticle/styles.css
+++ b/app/components/special/MovieArticle/styles.css
@@ -1,9 +1,12 @@
 .movieArticle {
-  lost-column: 5/12 0;
+  lost-column: 1 0;
   overflow: auto;
   max-height: calc(100vh - 50px);
   color: var(--cHeading);
   padding: 25px 0 15px;
   font-size: 1.6rem;
   font-family: "Quattrocento Sans", sans-serif;
+  @media (min-width: 80em) {
+    lost-column: 5/12 0;
+  }
 }
