--- a/app/containers/FilterForm/styles.css
+++ b/app/containers/FilterForm/styles.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
-  padding: 20px 0;
+  margin-bottom: 30px;
 }
 .filters {
   display: flex;
@@ -58,4 +58,5 @@
       bottom: 100%;
     }
   }
+
 }
