--- a/app/components/special/WelcomeText/styles.css
+++ b/app/components/special/WelcomeText/styles.css
@@ -1,13 +1,19 @@
 .welcomeText {
   font-family: 'Quattrocento Sans', sans-serif;
   color: var(--cHeading);
+  margin-bottom: 12px;
   h1,
   h3 {
     text-align: center;
   }
 
   h1 {
-    font-size: 2.8rem;
+    font-size: 3.4rem;
+    font-weight: 300;
+    :local b {
+      font-family: 'Maven Pro', sans-serif;
+      font-weight: 700;
+    }
   }
 
   h3 {
