Revert main homepage components

--- a/app/containers/HomePage/styles.css
+++ b/app/containers/HomePage/styles.css
@@ -1,12 +1,11 @@
 .homepage {
-  /* fullheight - navigation height*/
-  /*height: calc(100% - 50px);*/
-  /*min-height: 490px;*/
-  /*position: absolute;*/
-  /*width: 100%;*/
-  /*display: flex;*/
-  /*justify-content: center;*/
-  /*align-items: center;*/
-  /*flex-flow: column wrap;*/
-  width: 1000px;
+   /*fullheight - navigation height*/
+  height: calc(100% - 50px);
+  min-height: 490px;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
 }
