--- a/app/containers/FilterForm/styles.css
+++ b/app/containers/FilterForm/styles.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 .filters {
   display: flex;
