RWD Improves for ResultPage Container

--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -2,7 +2,14 @@ $navigationSize:  50px;
 
 .resultImage {
   max-height: calc(100vh - $navigationSize);
-  min-height: calc(100vh - $navigationSize);
+  min-height: 40vh;
+  &.isRevealed {
+    min-height: 100vh;
+  }
+  transition: min-height 0.35s ease;
+  @media (min-width: 80em) {
+    min-height: calc(100vh - $navigationSize);
+  }
   background-color: #22262e;
   position: relative;
   .overlay {
