--- a/app/components/special/MovieArticle/styles.css
+++ b/app/components/special/MovieArticle/styles.css
@@ -1,12 +1,14 @@
 .movieArticle {
   lost-column: 1 0;
-  overflow: auto;
   max-height: calc(100vh - 50px);
   color: var(--cHeading);
   padding: 25px 0 15px;
   font-size: 1.6rem;
   font-family: "Quattrocento Sans", sans-serif;
+  text-align: center;
   @media (min-width: 80em) {
+    text-align: inherit;
     lost-column: 5/12 0;
+    overflow: auto;
   }
 }
