--- a/app/components/special/MovieGallery/styles.css
+++ b/app/components/special/MovieGallery/styles.css
@@ -7,6 +7,6 @@
   position: relative;
   overflow: hidden;
   max-height: calc(100vh - 50px);
-  height: calc(100vh - 50px);
+  /*height: calc(100vh - 50px);*/
   background-color: #22262e;
 }
