--- a/app/components/special/MovieGenres/styles.css
+++ b/app/components/special/MovieGenres/styles.css
@@ -3,10 +3,14 @@
   display: flex;
   flex-direction: row;
   font-size: 1.2rem;
+
+  justify-content: center;
+  @media (min-width: 80em) {
+  }
   .item {
     display: flex;
     flex-direction: column;
-    margin: 0 24px 0 0;
+    margin: 4px 12px 0 12px;
   }
   .label {
     margin: 7px auto 0;
