--- a/app/components/special/MovieSingleCrew/styles.css
+++ b/app/components/special/MovieSingleCrew/styles.css
@@ -1,16 +1,15 @@
 .container {
-  margin: 0 20px 0 0;
+  margin: 0 10px;
   font-size: 1.4rem;
 }
 
 .image {
   position: relative;
-  width: 150px;
   height: 150px;
   overflow: hidden;
+  display: flex;
   :local img {
     position: absolute;
-    width: 100%;
     transform: translateY(-15px);
   }
   &::after {
