--- a/app/containers/HomePage/styles.css
+++ b/app/containers/HomePage/styles.css
@@ -1,6 +1,7 @@
 .homepage {
    /*fullheight - navigation height*/
   height: calc(100% - 50px);
+  transform: translateY(-50%);
   min-height: 490px;
   position: absolute;
   width: 100%;
