--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -7,8 +7,9 @@ $navigationSize:  50px;
     min-height: 100vh;
   }
   transition: min-height 0.35s ease;
-  @media (min-width: 80em) {
+  @media (min-width: 62.5em) {
     min-height: calc(100vh - $navigationSize);
+    transition: inherit;
   }
   background-color: #22262e;
   position: relative;
