--- a/app/components/special/MovieSingleCrew/styles.css
+++ b/app/components/special/MovieSingleCrew/styles.css
@@ -1,5 +1,5 @@
 .container {
-  margin: 0 10px;
+  margin: 10px 0;
   font-size: 1.4rem;
 }
 
@@ -23,7 +23,7 @@
     opacity: 0.5;
     z-index: 1;
   }
-  @media (min-width: 40em) {
+  @media (min-width: 62.5em) {
     width: 150px;
     height: 150px;
   }
