RWD & Main styles fixes

--- a/app/components/general/Title/styles.css
+++ b/app/components/general/Title/styles.css
@@ -4,6 +4,7 @@
   font-weight: 700;
   font-family: 'Quattrocento Sans', sans-serif;
   color: var(--cSupDark);
+  margin-bottom: 2px;
   &.--light {
     color: var(--cSup);
   }
