--- a/app/components/special/MovieCrewList/styles.css
+++ b/app/components/special/MovieCrewList/styles.css
@@ -8,17 +8,19 @@
   .singleCrew {
     float: left;
     min-width: 150px;
-    padding: 0 4px 0 4px;
+    padding: 0 4px;
     &:nth-child(2) {
       padding: 0 4px 0 0;
     }
+
     @media (min-width: 70em) {
-      padding: 0 8px 0 8px;
+      padding: 0 8px;
       &:nth-child(2) {
         padding: 0 8px 0 0;
       }
     }
   }
+
   @media (min-width: 62.5em) {
     justify-content: flex-start;
   }
