--- a/app/containers/FilterForm/styles.css
+++ b/app/containers/FilterForm/styles.css
@@ -4,8 +4,10 @@
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
+
   /* margin-bottom: 30px; */
 }
+
 .filters {
   display: flex;
   color: #fff;
@@ -18,10 +20,7 @@
     width: calc(100% - 10px);
   }
   :local h4 {
-    margin: 20px 0 4px 0;
-  }
-  :local Select {
-    opacity: 0;
+    margin: 20px 0 4px;
   }
   .full-width {
     flex-basis: 100%;
@@ -40,7 +39,7 @@
     padding: 25px 20px;
     z-index: 4;
     :local h4 {
-      margin: 12px 0 4px 0;
+      margin: 12px 0 4px;
     }
     :local button {
       top: 18px;
@@ -58,5 +57,4 @@
       bottom: 100%;
     }
   }
-
 }
