--- a/app/components/special/MovieCrewList/styles.css
+++ b/app/components/special/MovieCrewList/styles.css
@@ -9,13 +9,13 @@
     float: left;
     min-width: 150px;
     padding: 0 4px;
-    &:nth-child(2) {
+    &:nth-child(1) {
       padding: 0 4px 0 0;
     }
 
     @media (min-width: 70em) {
       padding: 0 8px;
-      &:nth-child(2) {
+      &:nth-child(1) {
         padding: 0 8px 0 0;
       }
     }
@@ -24,4 +24,9 @@
   @media (min-width: 62.5em) {
     justify-content: flex-start;
   }
+}
+
+.loading {
+  position: relative;
+  margin-top: 15px;
 }
