--- a/app/components/special/MovieRuntime/styles.css
+++ b/app/components/special/MovieRuntime/styles.css
@@ -2,9 +2,12 @@
   position: relative;
   top: 10px;
   font-size: 2.2rem;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
 }
 
 .icon {
-  margin: 0 4px 0 0;
   color: var(--cSup);
+  margin-right: 5px;
 }
