--- a/app/components/special/MovieGallery/styles.css
+++ b/app/components/special/MovieGallery/styles.css
@@ -9,3 +9,12 @@
   /* height: calc(100vh - 50px); */
   background-color: #22262e;
 }
+
+.loading {
+  position: absolute;
+  bottom: 16%;
+  right: 20px;
+  z-index: 999;
+  width: 36px;
+  height: 36px;
+}
