--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -33,6 +33,9 @@ $navigationSize:  50px;
   left: 0;
   overflow: hidden;
   user-select: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   .image {
     position: absolute;
     top: 0;
@@ -46,5 +49,11 @@ $navigationSize:  50px;
     user-select: none;
     user-drag: none;
     transform: translate(-50%, 0);
+  }
+}
+
+:global {
+  .swiper-loading-indicator {
+
   }
 }
