--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -41,19 +41,13 @@ $navigationSize:  50px;
     top: 0;
     left: 50%;
     width: auto;
-    height: auto;
-    max-height: none;
-    max-width: none;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
     user-select: none;
     user-drag: none;
     transform: translate(-50%, 0);
-  }
-}
 
-:global {
-  .swiper-loading-indicator {
-
+    @media (min-width: 62.5em) {
+      height: calc(100% - 120px);
+    }
   }
 }
