--- a/app/components/general/BlankImage/styles.css
+++ b/app/components/general/BlankImage/styles.css
@@ -2,6 +2,7 @@
   height: 100%;
   width: 100%;
   background-color: color(gray a(50%));
+  color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
