--- a/app/components/special/MovieGallery/styles.css
+++ b/app/components/special/MovieGallery/styles.css
@@ -11,10 +11,14 @@
 }
 
 .loading {
-  position: absolute;
-  bottom: 16%;
-  right: 20px;
-  z-index: 999;
-  width: 36px;
-  height: 36px;
+  width: 100%;
+  height: 100%;
+  min-height: calc(100vh - 50px);
+  background-color: #292E38;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .indicator {
+    color: #fff;
+  }
 }
