Improve movie description, easier to read & additional validation when we need or don't display read more msg

--- a/app/components/special/MovieDescription/styles.css
+++ b/app/components/special/MovieDescription/styles.css
@@ -2,6 +2,8 @@
   font-family: "Maven Pro", sans-serif;
   :local p {
     cursor: pointer;
+    font-size: 1.8rem;
+    line-height: 2.75rem;
   }
 }
 
