--- a/app/components/special/MovieGallery/styles.css
+++ b/app/components/special/MovieGallery/styles.css
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   min-height: calc(100vh - 50px);
-  background-color: #292E38;
+  background-color: #292e38;
   display: flex;
   align-items: center;
   justify-content: center;
