--- a/app/containers/App/styles.css
+++ b/app/containers/App/styles.css
@@ -1,5 +1,5 @@
 /* Global Variables
-   FIXME: !important statements are temporary solution for styles loading order
+   FIXME: !important statements are temporary solution for styles loading order (only on production)
    https://github.com/mxstbr/react-boilerplate/issues/1102 - more info
 */
 
