--- a/app/components/special/MovieArticle/styles.css
+++ b/app/components/special/MovieArticle/styles.css
@@ -2,12 +2,15 @@
   lost-column: 1 0;
   max-height: calc(100vh - 50px);
   color: var(--cHeading);
-  padding: 25px 0 15px;
+  padding: 15px 0 15px;
   font-size: 1.6rem;
   font-family: "Quattrocento Sans", sans-serif;
   text-align: center;
   :local section {
-    margin: 10px 0;
+    margin: 6px 0;
+    &:nth-child(1) {
+      margin: 0;
+    }
   }
 
   @media (min-width: 62.5em) {
