--- a/app/containers/ResultPage/styles.css
+++ b/app/containers/ResultPage/styles.css
@@ -4,7 +4,10 @@
   background-color: #22262e;
   display: flex;
   flex-flow: column wrap;
-
+  :local section {
+    margin: 0;
+    padding: 0;
+  }
   @media (min-width: 62.5em) {
     lost-column: 7/12 0;
   }
