Improve mobile FilterForm

--- a/app/containers/ResultPage/styles.css
+++ b/app/containers/ResultPage/styles.css
@@ -37,11 +37,13 @@
     .mobileFilterForm {
       z-index: 5;
       bottom: 0;
+
       :local form {
         display: block;
         width: 100%;
         position: fixed;
         bottom: 0;
+        background-color: #22262e;
       }
 
       @media (min-width: 62.5em) {
