Dropdown menu shows now from top

--- a/app/containers/ResultPage/styles.css
+++ b/app/containers/ResultPage/styles.css
@@ -45,6 +45,10 @@
         bottom: 0;
         background-color: #22262e;
       }
+      :global .Select-menu-outer {
+        top: auto;
+        bottom: 100%;
+      }
 
       @media (min-width: 62.5em) {
         display: none;
