--- a/app/components/special/MovieSingleCrew/styles.css
+++ b/app/components/special/MovieSingleCrew/styles.css
@@ -11,7 +11,8 @@
   display: flex;
   :local img {
     position: absolute;
-    transform: translateY(-15px);
+    transform: translateY(-40px);
+    width: 100%;
   }
   &::after {
     content: '';
