Range of improvements for ResultImage

--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -20,6 +20,11 @@
   }
 }
 
+.blankImage {
+  width: 100%;
+  min-height: calc(100vh - 50px);
+}
+
 .imageContainer {
   position: absolute;
   top: 0;
