--- a/app/components/special/MovieResultImage/styles.css
+++ b/app/components/special/MovieResultImage/styles.css
@@ -46,6 +46,21 @@
     user-drag: none;
     transform: translate(-50%, 0);
 
+    /*
+    Avoid empty images to appear as broken
+    */
+    img {
+      transform: translate3d(0, 0, 0);
+    }
+    /*
+    Fixes Firefox anomaly during images load time
+    */
+    @-moz-document url-prefix() {
+      img:-moz-loading {
+        visibility: hidden;
+      }
+    }
+
     @media (min-width: 62.5em) {
       height: calc(100% - 190px);
     }
